changed term variable

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@
 # automatically renumber tmux windows
 set -g renumber-windows on#
 
-set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "xterm-256color"
 
 # remap prefix to Control + a
 set -g prefix C-a
