--- a/i3/config
+++ b/i3/config
@@ -238,6 +238,7 @@ exec --no-startup-id nm-applet
 # exec --no-startup-id gnome-sound-applet
 # bindsym $mod+Shift+x exec "gnome-screensaver-command --lock "
 exec --no-startup-id redshift-gtk
+exec --no-startup-id qtpass
 
 # start firefox
 exec firefox
