--- a/tmux.conf
+++ b/tmux.conf
@@ -77,8 +77,8 @@ bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
-TMUX_GITBAR_DIR="/home/eggerk/.dotfiles/tmux-gitbar"
-source-file "/home/eggerk/.dotfiles/tmux-gitbar/tmux-gitbar.tmux"
+# TMUX_GITBAR_DIR="/home/eggerk/dotfiles/tmux-gitbar"
+# source-file "/home/eggerk/dotfiles/tmux-gitbar/tmux-gitbar.tmux"
 
 ##############################
 ### Color & Style Settings ###
