fixed tmux theme location

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -83,7 +83,7 @@ bind -t vi-copy 'y' copy-selection
 ##############################
 ### Color & Style Settings ###
 ##############################
-source ~/dotfiles/tmux/theme.sh
+source ~/dotfiles/tmux/tmux/theme.sh
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
