--- a/i3/config
+++ b/i3/config
@@ -139,6 +139,9 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
+# move workspace to other monitor
+bindsym $mod+Shift+m exec i3-msg move workspace to output right
+
 exec i3 workspace $workspace1
 
 # spotify, clementine on workspace 10
