--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -249,7 +249,6 @@ exec --no-startup-id redshift-gtk
 # start firefox
 exec "sleep 2; firefox"
 assign [class="Firefox"] $workspace1
-exec "sleep 2; thunderbird"
 assign [class = "Thunderbird"] $workspace0
 
 # transparency for notifications etc.
@@ -264,3 +263,6 @@ bindsym --release control+Print exec "scrot -u -e 'mv $f ~/Pictures/screenshots'
 exec_always --no-startup-id "setxkbmap -model pc105 -layout us_umlaut -option caps:escape"
 # do it again to make sure
 exec --no-startup-id "sleep 5; setxkbmap -model pc105 -layout us_umlaut -option caps:escape"
+
+# Disallow notifications to take focus.
+no_focus [class="Xfce4-notifyd"]
