--- a/i3/config
+++ b/i3/config
@@ -15,7 +15,6 @@ set $mod Mod1
 # is used in the bar {} block below.
 # font pango:monospace 8
 font pango:System Ubuntu 9, FontAwesome 10
-
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -112,10 +111,12 @@ set $workspace7 "7"
 set $workspace8 "8"
 set $workspace9 "9"
 set $workspace10 "10 "
+workspace $workspace0 output eDP-1
+workspace $workspace1 output DP-3.2.8
 
 # switch to workspace
-bindsym $mod+grave workspace $workspace0
 bindsym $mod+1 workspace $workspace1
+bindsym $mod+grave workspace $workspace0
 bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
@@ -213,7 +214,7 @@ bindsym $mod+Shift+p exec /home/eggerk/dotfiles/tools/shutdown_gui
 bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -D pulse sset Master 5%+; /home/eggerk/dotfiles/tools/volume_notification.sh"
 #decrease sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -D pulse sset Master 5%-; /home/eggerk/dotfiles/tools/volume_notification.sh"
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+bindsym XF86AudioMute exec --no-startup-id "pactl set-sink-mute 0 toggle"
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
@@ -236,6 +237,7 @@ bindsym $mod+Shift+a exec playerctl previous
 exec unity-settings-daemon
 exec /usr/lib/gnome-settings-daemon/gnome-settings-daemon
 exec /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
+exec /home/eggerk/dotfiles/X/xrandr.sh
 
 # set wallpaper
 exec_always feh --bg-fill --randomize /home/eggerk/Pictures/wallpapers/*
@@ -247,9 +249,11 @@ exec --no-startup-id redshift-gtk
 # exec --no-startup-id qtpass
 
 # start firefox
-exec "sleep 2; firefox"
+exec "firefox"
+exec "/home/eggerk/dotfiles/tools/start-communication.sh"
 assign [class="Firefox"] $workspace1
 assign [class = "Thunderbird"] $workspace0
+assign [class = "yakyak"] $workspace0
 
 # transparency for notifications etc.
 # exec compton
