--- a/i3/config
+++ b/i3/config
@@ -5,11 +5,10 @@
 # this file and re-run i3-config-wizard(1).
 #
 
-# i3 config file (v4)
-#
+# i3 config file (v4) #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod1
+set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -205,7 +204,7 @@ bar {
 }
 
 # lock computer
-bindsym $mod+Shift+x exec "i3lock; sleep 0.2s; xset dpms force off; feh --bg-fill --randomize /home/eggerk/Pictures/wallpapers/*"
+bindsym $mod+Shift+x exec "i3lock -c 000011; sleep 0.2s; xset dpms force off; feh --bg-fill --randomize /home/eggerk/Pictures/wallpapers/*"
 bindsym $mod+Shift+p exec /home/eggerk/dotfiles/tools/shutdown_gui
 
 # See https://faq.i3wm.org/question/3747/enabling-multimedia-keys/?answer=3759#post-id-3759
