--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod1
+set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -210,10 +210,12 @@ bindsym $mod+Shift+p exec /home/eggerk/dotfiles/tools/shutdown_gui
 # See https://faq.i3wm.org/question/3747/enabling-multimedia-keys/?answer=3759#post-id-3759
 # Pulse Audio controls
 #increase sound volume
-bindsym XF86AudioRaiseVolume exec --no-startup-id "amixer -D pulse sset Master 5%+; /home/eggerk/dotfiles/tools/volume_notification.sh"
+bindsym XF86AudioRaiseVolume exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -r"
 #decrease sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id "amixer -D pulse sset Master 5%-; /home/eggerk/dotfiles/tools/volume_notification.sh"
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
+bindsym XF86AudioLowerVolume exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -l"
+bindsym XF86AudioMute exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -m"
+bindsym $mod+XF86AudioMute exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -c"
+bindsym $mod+F1 exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -c"
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
@@ -244,6 +246,7 @@ exec_always xbindkeys
 # network applet
 exec --no-startup-id nm-applet
 exec --no-startup-id redshift-gtk
+exec --no-startup-id blueman-applet
 # exec --no-startup-id qtpass
 
 # start firefox
