--- a/i3/config
+++ b/i3/config
@@ -246,7 +246,7 @@ exec_always xbindkeys
 exec --no-startup-id nm-applet
 exec --no-startup-id redshift-gtk
 exec --no-startup-id blueman-applet
-# exec --no-startup-id qtpass
+exec --no-startup-id "dropbox start"
 
 # start firefox
 exec "firefox"
