--- a/i3/config
+++ b/i3/config
@@ -249,6 +249,7 @@ exec --no-startup-id nm-applet
 exec --no-startup-id redshift-gtk
 exec --no-startup-id blueman-applet
 exec --no-startup-id "dropbox start"
+exec --no-startup-id "udiskie --tray"
 
 # start firefox
 exec "firefox"
