--- a/termite/config
+++ b/termite/config
@@ -1,32 +1,52 @@
-# Solarized light color scheme
-
 [options]
-font = Ubuntu Mono derivative Powerline Regular
+font = Ubuntu Mono derivative Powerline 12
+scrollback_lines = 10000
 
 [colors]
-foreground = #657b83
-foreground_bold = #073642
-#foreground_dim = #888888
-background = #fdf6e3
-cursor = #586e75
+# Base16 Solarized Light
+# Author: Ethan Schoonover (http://ethanschoonover.com/solarized)
 
-# if unset, will reverse foreground and background
-#highlight = #839496
+foreground      = #333333
+foreground_bold = #333333
+cursor          = #778282
+background      = #fdf6e3
 
-# colors from color0 to color254 can be set
-color0 = #073642
-color1 = #dc322f
-color2 = #859900
-color3 = #b58900
-color4 = #268bd2
-color5 = #d33682
-color6 = #2aa198
-color7 = #eee8d5
-color8 = #002b36
-color9 = #cb4b16
-color10 = #586e75
-color11 = #657b83
-color12 = #839496
-color13 = #6c71c4
-color14 = #93a1a1
+# 16 color space
+
+# Black, Gray, Silver, White
+color0  = #073642
+color8  = #002b36
+color7  = #ccc7b7
 color15 = #fdf6e3
+
+# Red
+color1  = #dc322f
+color9  = #dc322f
+
+# Green
+color2  = #859900
+color10 = #859900
+
+# Yellow
+color3  = #b58900
+color11 = #b58900
+
+# Blue
+color4  = #268bd2
+color12 = #268bd2
+
+# Purple
+color5  = #6c71c4
+color13 = #6c71c4
+
+# Teal
+color6  = #2aa198
+color14 = #2aa198
+
+# Extra colors
+color16 = #cb4b16
+color17 = #d33682
+color18 = #eee8d5
+color19 = #93a1a1
+color20 = #657b83
+color21 = #073642
