--- a/i3/config
+++ b/i3/config
@@ -28,77 +28,69 @@ font pango:System Ubuntu 9, FontAwesome 10
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
+# Start a terminal.
 bindsym $mod+Return exec i3-sensible-terminal
 
-# kill focused window
+# Kill focused window.
 bindsym $mod+Shift+q kill
 # The middle button over a titlebar kills the window
 bindsym --release Shift+button2 kill
 
-# rofi
-# bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "System San Francisco Display 18"
+# Rofi.
 bindsym $mod+d exec "rofi -modi drun,run,window -show drun -fuzzy"
 bindsym $mod+c exec rofi -show window
 
-# start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-
-# change focus
+# Change focus.
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# alternatively, you can use the cursor keys:
+# Alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
+# Move focused window.
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# alternatively, you can use the cursor keys:
+# Alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
+# Split in horizontal orientation.
 bindsym $mod+n split h
 
-# split in vertical orientation
+# Split in vertical orientation.
 bindsym $mod+v split v
 
-# enter fullscreen mode for the focused container
+# Enter fullscreen mode for the focused container.
 bindsym $mod+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
+# Change container layout (stacked, tabbed, toggle split).
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
-# toggle tiling / floating
+# Toggle tiling / floating.
 bindsym $mod+Shift+space floating toggle
 
-# change focus between tiling / floating windows
+# Change focus between tiling / floating windows.
 bindsym $mod+space focus mode_toggle
 
-# focus the parent container
+# Focus the parent container.
 bindsym $mod+a focus parent
 
-# focus the child container
+# Focus the child container.
 #bindsym $mod+d focus child
 
-# workspaces
+# Workspaces.
 set $workspace0 "0"
 set $workspace1 "1"
 set $workspace2 "2"
@@ -110,9 +102,8 @@ set $workspace7 "7"
 set $workspace8 "8"
 set $workspace9 "9"
 set $workspace10 "10"
-# set $workspace10 "10 "
 
-# switch to workspace
+# Switch to workspace.
 bindsym $mod+1 workspace $workspace1
 bindsym $mod+grave workspace $workspace0
 bindsym $mod+2 workspace $workspace2
@@ -125,7 +116,7 @@ bindsym $mod+9 workspace $workspace9
 bindsym $mod+8 workspace $workspace8
 bindsym $mod+0 workspace $workspace10
 
-# move focused container to workspace
+# Move focused container to workspace.
 bindsym $mod+Shift+grave move container to workspace $workspace0
 bindsym $mod+Shift+1 move container to workspace $workspace1
 bindsym $mod+Shift+2 move container to workspace $workspace2
@@ -138,27 +129,27 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
-# move workspace to other monitor
+# Move workspace to other monitor.
 bindsym $mod+Shift+m exec i3-msg move workspace to output right
 
 exec i3 workspace $workspace1
 
-# spotify, clementine on workspace 10
+# Spotify, clementine on workspace 10.
 assign [class="Clementine"] $workspace10
 assign [class="Spotify"] $workspace10
 for_window [class="Spotify"] move to workspace $workspace10
 for_window [class="LineAttack"] floating enable
 
-# reload the configuration file
+# Reload the configuration file.
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+# Restart i3 inplace (preserves your layout/session, can be used to upgrade i3).
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
+# Exit i3 (logs you out of your X session).
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'tmux kill-server; i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
+# Resize window (you can also use the mouse for that).
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+        # These bindings trigger as soon as you enter the resize mode.
 
         # Pressing left will shrink the window’s width.
         # Pressing right will grow the window’s width.
@@ -169,13 +160,13 @@ mode "resize" {
         bindsym k resize shrink height 10 px or 10 ppt
         bindsym l resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
+        # Same bindings, but for the arrow keys.
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape
+        # Back to normal: Enter or Escape.
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
@@ -198,32 +189,32 @@ client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-co
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          $indicator-color
 
 # Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# finds out, if available).
 bar {
         position bottom
         font pango:Ubuntu 10, FontAwesome 10
         status_command i3status
 }
 
-# lock computer
+# Lock computer.
 bindsym $mod+Shift+x exec "i3lock -c 000011; sleep 0.2s; xset dpms force off; /home/eggerk/dotfiles/tools/set-wallpaper.sh"
 bindsym $mod+Shift+p exec /home/eggerk/dotfiles/tools/shutdown_gui
 
+# Pulse Audio controls.
 # See https://faq.i3wm.org/question/3747/enabling-multimedia-keys/?answer=3759#post-id-3759
-# Pulse Audio controls
-#increase sound volume
+# Increase sound volume.
 bindsym XF86AudioRaiseVolume exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -r"
-#decrease sound volume
+# Decrease sound volume.
 bindsym XF86AudioLowerVolume exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -l"
 bindsym XF86AudioMute exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -m"
 bindsym $mod+XF86AudioMute exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -c"
 bindsym $mod+F1 exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -c"
 
-# Screen brightness controls
+# Screen brightness controls.
 bindsym XF86MonBrightnessUp exec /home/eggerk/dotfiles/X/acpilight/xbacklight -inc 5 # increase screen brightness
 bindsym XF86MonBrightnessDown exec /home/eggerk/dotfiles/X/acpilight/xbacklight -dec 5 # decrease screen brightness
 
-# Touchpad controls
+# Touchpad controls.
 bindsym $mod+shift+t exec /home/eggerk/dotfiles/X/toggle_touchpad.sh
 
 # Media player controls
@@ -236,22 +227,19 @@ bindsym $mod+Shift+s exec playerctl play-pause
 bindsym $mod+Shift+d exec playerctl next
 bindsym $mod+Shift+a exec playerctl previous
 
-# use unity/gnome settings
 exec /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
 exec /home/eggerk/dotfiles/X/xrandr.sh
-
-# set wallpaper
 exec_always --no-startup-id /home/eggerk/dotfiles/tools/set-wallpaper.sh
 exec_always xbindkeys
 
-# network applet
+# Applets.
 exec --no-startup-id nm-applet
 exec --no-startup-id redshift-gtk
 exec --no-startup-id blueman-applet
 exec --no-startup-id "dropbox start"
 exec --no-startup-id "udiskie --tray"
 
-# start firefox
+# Start firefox
 exec "firefox"
 exec "/home/eggerk/dotfiles/tools/start-communication.sh"
 assign [class="Firefox"] $workspace1
@@ -262,20 +250,15 @@ assign [class = "Slack"] $workspace0
 for_window [class="slack"] move to workspace $workspace0
 for_window [class="Slack"] move to workspace $workspace0
 
-# transparency for notifications etc.
-# exec compton
-
-# screenshot
+# Screenshot
 bindsym --release Print exec "scrot -e 'mv $f ~/Pictures/screenshots'"
 bindsym --release Shift+Print exec "notify-send -t 1500 'Select area for screenshot.'; scrot -s -e 'mv $f ~/Pictures/screenshots'"
 bindsym --release control+Print exec "scrot -u -e 'mv $f ~/Pictures/screenshots'"
 
-# keyboard layout
+# Keyboard layout.
 exec_always --no-startup-id "setxkbmap -model pc105 -layout us_umlaut -option caps:escape"
-# do it again to make sure
+# Do it again to make sure.
 exec --no-startup-id "sleep 5; setxkbmap -model pc105 -layout us_umlaut -option caps:escape"
-# Disable caps-lock.
-exec_always --no-startup-id "python -c 'from ctypes import *; X11 = cdll.LoadLibrary(\"libX11.so.6\"); display = X11.XOpenDisplay(None); X11.XkbLockModifiers(display, c_uint(0x0100), c_uint(2), c_uint(0)); X11.XCloseDisplay(display)'"
 
 # Disallow notifications to take focus.
 no_focus [class="Xfce4-notifyd"]
