--- a/i3/config
+++ b/i3/config
@@ -174,7 +174,8 @@ bindsym $mod+r mode "resize"
 
 # set $bg-color 	         #3c3b37
 set $bg-color            #285577
-set $inactive-bg-color   #222222
+# set $inactive-bg-color   #222222
+set $inactive-bg-color   #78a5c7
 set $text-color          #f3f4f5
 set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
@@ -187,6 +188,12 @@ client.focused          $bg-color           $bg-color          $text-color      
 client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color $indicator-color
 client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color $indicator-color
 client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          $indicator-color
+
+# Gaps.
+for_window [class="^.*"] border pixel 3
+for_window [class="Xfce4-notifyd"] border pixel 0
+gaps inner 5
+gaps outer 0
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available).
