--- a/i3/config
+++ b/i3/config
@@ -198,9 +198,13 @@ gaps outer 0
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available).
 bar {
-        position bottom
-        font pango:Ubuntu 10, FontAwesome 10
-        status_command i3status
+  i3bar_command i3bar -t
+  colors {
+    background #00000080
+  }
+  position bottom
+  font pango:Ubuntu 10, FontAwesome 10
+  status_command i3status
 }
 
 # Lock computer.
