--- a/i3/config
+++ b/i3/config
@@ -236,8 +236,26 @@ bar {
 }
 
 # Lock computer.
-bindsym $mod+Shift+x exec /home/eggerk/dotfiles/tools/lock.sh
-bindsym $mod+Shift+p exec /home/eggerk/dotfiles/tools/shutdown_gui
+set $lock_command "exec /home/eggerk/dotfiles/tools/lock.sh"
+bindsym $mod+Shift+x $lock_command
+set $power_mode "Power menu: [x] lock; [l]ogout; [s]uspend; [r]eboot; [p]oweroff"
+mode $power_mode {
+  # Lock.
+  bindsym x exec "$lock_command && i3-msg mode \"default\""
+  # Logout.
+  bindsym l exec "i3-msg exit"
+  # Reboot.
+  bindsym r exec "dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 \"org.freedesktop.login1.Manager.Reboot\" boolean:true"
+  # Powe off.
+  bindsym p exec "dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 \"org.freedesktop.login1.Manager.PowerOff\" boolean:true"
+  # Suspend.
+  bindsym s exec "dbus-send --system --print-reply --dest=org.freedesktop.login1 /org/freedesktop/login1 \"org.freedesktop.login1.Manager.Suspend\" boolean:true"
+
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+  bindsym $mod+shift+p mode "default"
+}
+bindsym $mod+shift+p mode $power_mode
 
 # Pulse Audio controls.
 # See https://faq.i3wm.org/question/3747/enabling-multimedia-keys/?answer=3759#post-id-3759
