--- a/i3/config
+++ b/i3/config
@@ -285,7 +285,7 @@ bindsym $mod+Shift+d exec playerctl next
 bindsym $mod+Shift+a exec playerctl previous
 
 exec /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
-exec /home/eggerk/dotfiles/X/xrandr.sh
+exec /home/eggerk/dotfiles/X/xrandr.sh on on
 exec_always --no-startup-id /home/eggerk/dotfiles/tools/set-wallpaper.sh
 exec --no-startup-id "/home/eggerk/dotfiles/tools/set-wallpaper.sh startup"
 exec_always xbindkeys
