--- a/i3/config
+++ b/i3/config
@@ -4,6 +4,7 @@
 # Should you change your keyboard layout some time, delete
 # this file and re-run i3-config-wizard(1).
 #
+set $dotfiles_path /home/eggerk/dotfiles
 
 # i3 config file (v4) #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
@@ -136,11 +137,11 @@ bindsym $mod+Shift+m move workspace to output right
 set $monitor_mode "Monitors: [1] auto, [2] internal only, [3] external only, [4] expand, [5] mirror"
 bindsym $mod+m mode $monitor_mode
 mode  $monitor_mode{
-  bindsym 1 exec /home/eggerk/dotfiles/X/xrandr.sh auto ; mode "default"
-  bindsym 2 exec /home/eggerk/dotfiles/X/xrandr.sh internal ; mode "default"
-  bindsym 3 exec /home/eggerk/dotfiles/X/xrandr.sh external ; mode "default"
-  bindsym 4 exec /home/eggerk/dotfiles/X/xrandr.sh expand ; mode "default"
-  bindsym 5 exec /home/eggerk/dotfiles/X/xrandr.sh mirror ; mode "default"
+  bindsym 1 exec $dotfiles_path/X/xrandr.sh auto ; mode "default"
+  bindsym 2 exec $dotfiles_path/X/xrandr.sh internal ; mode "default"
+  bindsym 3 exec $dotfiles_path/X/xrandr.sh external ; mode "default"
+  bindsym 4 exec $dotfiles_path/X/xrandr.sh expand ; mode "default"
+  bindsym 5 exec $dotfiles_path/X/xrandr.sh mirror ; mode "default"
 
   # Back to normal: Enter or Escape.
   bindsym Return mode "default"
@@ -257,17 +258,17 @@ for_window [class="Nitrogen"] floating enable sticky enable border normal
 for_window [class="Pamac-manager"] floating enable
 for_window [class="qt5ct"] floating enable sticky enable border normal
 for_window [class="Qtconfig-qt4"] floating enable sticky enable border normal
-for_window [class="(?i)virtualbox"] floating enable border normal
 
 # Autostart applications
-exec --no-startup-id /home/eggerk/dotfiles/i3/polkit.sh
+exec --no-startup-id $dotfiles_path/i3/polkit.sh
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id xautolock -time 10 -locker $lock_command
+exec --no-startup-id $dotfiles_path/tools/lights_on.sh
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
 # Lock computer.
-set $lock_command /home/eggerk/dotfiles/tools/lock.sh
+set $lock_command $dotfiles_path/tools/lock.sh
 bindsym $mod+Shift+x exec $lock_command
 set $power_mode "Power menu: [x] lock; [l]ogout; [s]uspend; [r]eboot; [p]oweroff"
 mode $power_mode {
@@ -291,19 +292,19 @@ bindsym $mod+shift+p mode $power_mode
 # Pulse Audio controls.
 # See https://faq.i3wm.org/question/3747/enabling-multimedia-keys/?answer=3759#post-id-3759
 # Increase sound volume.
-bindsym XF86AudioRaiseVolume exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -r"
+bindsym XF86AudioRaiseVolume exec --no-startup-id "$dotfiles_path/tools/audio_tools.sh -r"
 # Decrease sound volume.
-bindsym XF86AudioLowerVolume exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -l"
-bindsym XF86AudioMute exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -m"
-bindsym $mod+XF86AudioMute exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -c"
-bindsym $mod+F1 exec --no-startup-id "/home/eggerk/dotfiles/tools/audio_tools.sh -c"
+bindsym XF86AudioLowerVolume exec --no-startup-id "$dotfiles_path/tools/audio_tools.sh -l"
+bindsym XF86AudioMute exec --no-startup-id "$dotfiles_path/tools/audio_tools.sh -m"
+bindsym $mod+XF86AudioMute exec --no-startup-id "$dotfiles_path/tools/audio_tools.sh -c"
+bindsym $mod+F1 exec --no-startup-id "$dotfiles_path/tools/audio_tools.sh -c"
 
 # Screen brightness controls.
-bindsym XF86MonBrightnessUp exec /home/eggerk/dotfiles/X/acpilight/xbacklight -inc 5 # increase screen brightness
-bindsym XF86MonBrightnessDown exec /home/eggerk/dotfiles/X/acpilight/xbacklight -dec 5 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec $dotfiles_path/X/acpilight/xbacklight -inc 5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec $dotfiles_path/X/acpilight/xbacklight -dec 5 # decrease screen brightness
 
 # Touchpad controls.
-bindsym $mod+shift+t exec /home/eggerk/dotfiles/X/toggle_touchpad.sh
+bindsym $mod+shift+t exec $dotfiles_path/X/toggle_touchpad.sh
 
 # Media player controls
 # Needs https://github.com/acrisci/playerctl/releases
@@ -315,9 +316,9 @@ bindsym $mod+Shift+s exec playerctl play-pause
 bindsym $mod+Shift+d exec playerctl next
 bindsym $mod+Shift+a exec playerctl previous
 
-exec /home/eggerk/dotfiles/X/xrandr.sh
-exec_always --no-startup-id /home/eggerk/dotfiles/tools/set-wallpaper.sh
-exec --no-startup-id "/home/eggerk/dotfiles/tools/set-wallpaper.sh startup"
+exec $dotfiles_path/X/xrandr.sh
+exec_always --no-startup-id $dotfiles_path/tools/set-wallpaper.sh
+exec --no-startup-id "$dotfiles_path/tools/set-wallpaper.sh startup"
 exec_always xbindkeys
 
 # Applets.
@@ -325,11 +326,11 @@ exec --no-startup-id nm-applet
 exec --no-startup-id redshift-gtk
 exec --no-startup-id blueman-applet
 exec --no-startup-id "dropbox start"
-exec --no-startup-id "udiskie --tray --config=/home/eggerk/dotfiles/misc/udiskie.yml"
+exec --no-startup-id "udiskie --tray --config=$dotfiles_path/misc/udiskie.yml"
 
 # Start firefox
 exec "firefox"
-exec "/home/eggerk/dotfiles/tools/start-communication.sh"
+exec "$dotfiles_path/tools/start-communication.sh"
 assign [class="Firefox"] $workspace1
 assign [class = "Thunderbird"] $workspace0
 assign [class = "yakyak"] $workspace0
@@ -354,7 +355,7 @@ no_focus [class="Xfce4-notifyd"]
 # Compton
 exec --no-startup-id compton --backend glx --paint-on-overlay --glx-no-stencil \
                              --vsync opengl-swc --unredir-if-possible -b \
-                             --config /home/eggerk/dotfiles/compton/compton.conf
+                             --config $dotfiles_path/compton/compton.conf
 
 # Disable caps lock because sometimes it reenables itself for some reason.
 exec_always --no-startup-id "python3 -c 'from ctypes import *; X11 = cdll.LoadLibrary(\"libX11.so.6\"); display = X11.XOpenDisplay(None); X11.XkbLockModifiers(display, c_uint(0x0100), c_uint(2), c_uint(0)); X11.XCloseDisplay(display)'"
