Some compton config experimentation

--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -1,8 +1,13 @@
 # Opacity
 inactive-opacity = 0.9;
 active-opacity = 1;
-frame-opacity = 0.7;
-inactive-opacity-override = false;
+# Make hidden windows fully transparent.
+opacity-rule = [
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
+
+# frame-opacity = 0.7;
+# inactive-opacity-override = false;
 alpha-step = 0.06;
 # inactive-dim = 0.05;
 
