--- a/i3/config
+++ b/i3/config
@@ -196,7 +196,7 @@ bindsym $mod+r mode "resize"
 
 # Theme colors
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3  #aa8899
+  client.focused          #556064 #556064 #80FFF9 #FDF6E3  #16a085
   client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
   client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
   client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
