Less transparency, floating file roller

--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -23,7 +23,7 @@
 #     miller: Use miller columns which show multiple levels of the hierarchy
 #     multipane: Midnight-commander like multipane view showing all tabs next
 #                to each other
-set viewmode miller
+# set viewmode miller
 #set viewmode multipane
 
 # How many columns are there, and what are their relative widths?
@@ -207,10 +207,10 @@ set idle_delay 2000
 set metadata_deep_search false
 
 # Clear all existing filters when leaving a directory
-set clear_filters_on_dir_change false
+# set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column
-set line_numbers false
+# set line_numbers false
 
 # ===================================================================
 # == Local Options
@@ -612,4 +612,4 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
-default_linemode devicons
+# default_linemode devicons
