--- a/i3/config
+++ b/i3/config
@@ -157,10 +157,6 @@ assign [class="Spotify"] $workspace10
 for_window [class="Spotify"] move to workspace $workspace10
 for_window [class="LineAttack"] floating enable
 
-# Some floating windows.
-for_window [class="[Gg]nome-calculator"] floating enable
-for_window [class="[Nn]m-connection-editor"] floating enable
-
 # Reload the configuration file.
 bindsym $mod+Shift+c reload
 # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3).
@@ -249,6 +245,8 @@ bindsym $mod+Shift+F3 exec pcmanfm
 bindsym $mod+F3 exec $terminal -e 'ranger'
 
 # Open specific applications in floating mode
+for_window [class="[Gg]nome-calculator"] floating enable
+for_window [class="[Nn]m-connection-editor"] floating enable
 for_window [title="alsamixer"] floating enable border pixel 1
 for_window [class="Galculator"] floating enable border pixel 1
 for_window [class="GParted"] floating enable border normal
@@ -258,6 +256,7 @@ for_window [class="Nitrogen"] floating enable sticky enable border normal
 for_window [class="Pamac-manager"] floating enable
 for_window [class="qt5ct"] floating enable sticky enable border normal
 for_window [class="Qtconfig-qt4"] floating enable sticky enable border normal
+for_window [class="[Ff]ile-roller"] floating enable
 
 # Autostart applications
 exec --no-startup-id $dotfiles_path/i3/polkit.sh
