--- a/i3/config
+++ b/i3/config
@@ -357,3 +357,5 @@ exec_always --no-startup-id killall compton; compton --backend glx --paint-on-ov
 
 # Disable caps lock because sometimes it reenables itself for some reason.
 exec_always --no-startup-id "python3 -c 'from ctypes import *; X11 = cdll.LoadLibrary(\"libX11.so.6\"); display = X11.XOpenDisplay(None); X11.XkbLockModifiers(display, c_uint(0x0100), c_uint(2), c_uint(0)); X11.XCloseDisplay(display)'"
+
+exec_always --no-startup-id $dotfiles_path/X/remap_keys
