--- a/i3/config
+++ b/i3/config
@@ -333,7 +333,7 @@ exec --no-startup-id nm-applet
 exec --no-startup-id redshift-gtk
 exec --no-startup-id blueman-applet
 exec --no-startup-id "dropbox start"
-exec_always --no-startup-id "/home/eggerk/.local/share/tresorit/tresorit --hidden"
+exec --no-startup-id "/home/eggerk/.local/share/tresorit/tresorit --hidden"
 exec --no-startup-id "udiskie --tray --config=$dotfiles_path/misc/udiskie.yml"
 
 # Start firefox, sleep a while for wifi connection to be ready.
