--- a/i3/config
+++ b/i3/config
@@ -206,10 +206,22 @@ client.background #2B2C2B
 # Gaps.
 for_window [class="^.*"] border pixel 2
 for_window [class="Xfce4-notifyd"] border pixel 0
+smart_gaps inverse_outer
+exec_always $dotfiles_path/i3/set_gaps.sh
 gaps inner 5
 gaps outer 3
-workspace $workspace10 gaps outer 30
-workspace $workspace10 gaps inner 25
+
+set $gaps_mode "Gaps: [S] Disable smart gaps, [s] Enable smart gaps, [<] Small gaps, [>] Large gaps"
+mode $gaps_mode {
+  bindsym Shift+s      gaps horizontal current set 0 ; mode "default"
+  bindsym s            gaps horizontal current set 100 ; mode "default"
+  bindsym Shift+comma  gaps outer all set 3; gaps horizontal all set 0; gaps inner all set 5 ; mode "default"
+  bindsym Shift+period gaps outer all set 0; gaps horizontal all set 100; gaps inner all set 12; mode "default"
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+  bindsym $mod+g mode "default"
+}
+bindsym $mod+g mode $gaps_mode
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available).
