--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,9 +38,11 @@ setw -g pane-base-index 1
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
 # split window and fix path for tmux 1.9
-bind | split-window -h -c "#{pane_current_path}"
-bind / split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
+bind ? split-window -h
+bind _ split-window -v
+bind | split-window -h -c ""
+bind / split-window -h -c ""
+bind - split-window -v -c ""
 
 # synchronize all panes in a window
 bind y setw synchronize-panes
@@ -74,8 +76,8 @@ setw -g mode-keys vi
 # bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
 
 # TMUX_GITBAR_DIR="/home/eggerk/dotfiles/tmux-gitbar"
 # source-file "/home/eggerk/dotfiles/tmux-gitbar/tmux-gitbar.tmux"
@@ -86,13 +88,13 @@ bind -t vi-copy 'y' copy-selection
 source ~/dotfiles/tmux/tmux/theme.sh
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # for vim
-set -g @resurrect-strategy-vim 'session'
+# set -g @resurrect-strategy-vim 'session'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -100,4 +102,6 @@ set -g @resurrect-strategy-vim 'session'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/dotfiles/tmux/plugins/tpm/tpm'
+# run '~/dotfiles/tmux/plugins/tpm/tpm'
+
+set -s escape-time 0
