--- a/i3/config
+++ b/i3/config
@@ -195,10 +195,10 @@ bindsym $mod+r mode "resize"
 
 # Theme colors
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3  #16a085
-  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
-  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
-  client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
+  client.focused          #2F343F #2F343F #ffffff #FDF6E3  #5294E2
+  client.focused_inactive #2F3D44 #2F3D44 #aaaaaa #454948
+  client.unfocused        #2F3D44 #2F3D44 #aaaaaa #454948
+  client.urgent           #CB4B16 #FDF6E3 #5294E2 #268BD2
   client.placeholder      #000000 #0c0c0c #ffffff #000000
 
 client.background #2B2C2B
@@ -233,7 +233,7 @@ bar {
     separator  #454947
 
 #                      border  backgr. text
-    focused_workspace  #F9FAF9 #16a085 #292F34
+    focused_workspace  #F9FAF9 #5294E2 #292F34
     active_workspace   #595B5B #353836 #FDF6E3
     inactive_workspace #595B5B #202A2E #EEE8D5
     binding_mode       #16a085 #2C2C2C #F9FAF9
@@ -373,9 +373,9 @@ exec --no-startup-id "sleep 5; setxkbmap -model pc105 -layout us_umlaut -option 
 no_focus [class="Xfce4-notifyd"]
 
 # Compton
-exec_always --no-startup-id killall compton; compton --backend glx --paint-on-overlay --glx-no-stencil \
-                             --vsync opengl-swc --unredir-if-possible -b \
-                             --config $dotfiles_path/compton/compton.conf
+# exec_always --no-startup-id killall compton; compton --backend glx --paint-on-overlay --glx-no-stencil \
+#                              --vsync opengl-swc --unredir-if-possible -b \
+#                              --config $dotfiles_path/compton/compton.conf
 
 # Disable caps lock because sometimes it reenables itself for some reason.
 exec_always --no-startup-id "python3 -c 'from ctypes import *; X11 = cdll.LoadLibrary(\"libX11.so.6\"); display = X11.XOpenDisplay(None); X11.XkbLockModifiers(display, c_uint(0x0100), c_uint(2), c_uint(0)); X11.XCloseDisplay(display)'"
