--- a/i3/config
+++ b/i3/config
@@ -373,9 +373,9 @@ exec --no-startup-id "sleep 5; setxkbmap -model pc105 -layout us_umlaut -option 
 no_focus [class="Xfce4-notifyd"]
 
 # Compton
-# exec_always --no-startup-id killall compton; compton --backend glx --paint-on-overlay --glx-no-stencil \
-#                              --vsync opengl-swc --unredir-if-possible -b \
-#                              --config $dotfiles_path/compton/compton.conf
+exec_always --no-startup-id killall compton; compton --backend glx --paint-on-overlay --glx-no-stencil \
+                             --vsync opengl-swc --unredir-if-possible -b \
+                             --config $dotfiles_path/compton/compton.conf
 
 # Disable caps lock because sometimes it reenables itself for some reason.
 exec_always --no-startup-id "python3 -c 'from ctypes import *; X11 = cdll.LoadLibrary(\"libX11.so.6\"); display = X11.XOpenDisplay(None); X11.XkbLockModifiers(display, c_uint(0x0100), c_uint(2), c_uint(0)); X11.XCloseDisplay(display)'"
